Mobile controlls done just need to sort bug where game doesnt play on mobile

--- a/public/CSS/game-styles.css
+++ b/public/CSS/game-styles.css
@@ -24,6 +24,14 @@ body{
    background-image: url("../GameAssets/Images/BloodSplatteruiEffect2.png");
 
    opacity: 0;
+   position: absolute;
+   left: 0vw;
+   top: 0vh;
+   width: 100vw;
+   height: 100vh;
+
+   /*pointer evens none https://stackoverflow.com/questions/1009753/pass-mouse-events-through-absolutely-positioned-element*/
+   pointer-events: none;
 
    /* Full height */
    height: 100%;
